blog-install-and-configure-traefik-with-helm/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: headers-default
  namespace: traefik

spec:
  headers:
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN

---
apiVersion: v1
kind: Pod
metadata:
  name: whoami
  namespace: traefik
  labels:
    app: whoami

spec:
  containers:
    - name: whoami
      image: containous/whoami:latest
      ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: traefik

spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80

  selector:
    app: whoami

  type: ClusterIP

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: traefik

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`whoami.example.com`)
      kind: Rule
      middlewares:
        - name: headers-default
          namespace: traefik

      services:
        - name: whoami
          port: 80
